--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<version>1.18.36</version>
 			<scope>provided</scope> <!-- Apenas para desenvolvimento -->
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
